# p_5c39354b

./: CMakeLists.txt  README.md  monitor.sh  num1.xml  param(英雄）.xml  param.xml  readme.md
HERORM2020/: CMakeLists.txt  README.md  monitor.sh
HERORM2020-Sentinel/: README.md
HERORM2020-Sentinel/app/: plot
HERORM2020-Sentinel/chassis/: CMakeLists.txt
HERORM2020-Sentinel/chassis/include/: armordetector.h
HERORM2020-Sentinel/chassis/src/: serialport.cpp
HERORM2020-Sentinel/gimbal/include/: base.h  cannode.h  predictor.h  serialport.h
HERORM2020-Sentinel/gimbal/src/: anglesolver.cpp  mvcamera.cpp  timer.cpp  workspace.cpp
HERORM2020-Sentinel/gimble/: CMakeLists.txt
HERORM2020/include/: an_predictor.h  anglesolver.h  armordetector.h  base.h  cannode.h  predictor.h  runesolver.h  serialport.h  targetsolver.h  universal_prediction.h  workspace.h
HERORM2020/src/: an_predictor.cpp  anglesolver.cpp  armordetector.cpp  cannode.cpp  imageprocess.cpp  mvcamera.cpp  runesolver.cpp  serialport.cpp  targetsolver.cpp  workspace.cpp
Reconstruction/: CMakeLists.txt  ReadMe.md  change.sh
Reconstruction/include/: kalman.h  kalmanf.h  recognize.h  stereo.h
Reconstruction/param/: param.xml
Reconstruction/python/: LeftIntrinsicMatrix.npy  LeftRadialDistortion.npy  RightIntrinsicMatrix.npy  RightRadialDistortion.npy  lab1.py  lab2.py
Reconstruction/src/: kalman.cpp  kalmanf.cpp  main.cpp  recognize.cpp  stereo.cpp
Rune/: CMakeLists.txt  readme.md
Rune(椭圆版)/: CMakeLists.txt  README.md
Rune(椭圆版)/include/: anglesolver.h  energy.hpp  mvcamera.h  timer.hpp  videoio.hpp  workspace.h
Rune(椭圆版)/src/: anglesolver.cpp  energy.cpp  main.cpp  videoio.cpp  workspace.cpp
Rune/include/: draw.hpp  energy.hpp  serialport.h  timer.hpp
Rune/src/: anglesolver.cpp  draw.cpp  energy.cpp  serialport.cpp  timer.cpp  workspace.cpp
VideoCapture/: CMakeLists.txt
VideoCapture/include/: camera.h
VideoCapture/src/: camera.cpp  main.cpp
app/: README.md  plot  readme.md
app/lib/: libQt5PrintSupport.so.5  libcups.so.2  libjasper.so.1  libjpeg.so.8  libnvidia-tls.so.384.130
can/: CMakeLists.txt  readme.md
can/include/: cannode.h
can/src/: cannode.cpp  main.cpp
chassis/: CMakeLists.txt  monitor_down.sh
chassis/include/: base.h
chassis/src/: anglesolver.cpp  armordetector.cpp  mvcamera.cpp  serialport.cpp  tempCodeRunnerFile.cpp  workspace.cpp
gimbal/: CMakeLists.txt  monitor_top.sh
gimbal/include/: workspace.h
gimbal/param/: param.xml
gimbal/src/: anglesolver.cpp  cannode.cpp  serialport.cpp  targetsolver.cpp  workspace.cpp
include/: an_predictor.h  anglesolver.h  armorchecker.h  armordetector.h  base.h  cannode.h  dhcamera.h  dimension_runesolver.h  generalfunction.h  imageprocess.h  mvcamera.h  predict.h  predictor.h  robotdetector.h  runesolver.h  serialport.h  targetsolver.h  timer.h  universal_prediction.h  workspace.h
models/: svm_model.xml
param/: param.xml  param1.xml
plot/: mainwindow.ui  plot.pro  readme.md
plot/include/: hero_plot.h  mainwindow.h  qcustomplot.h  serialport.h  ui_mainwindow.h
plot/src/: hero_plot.cpp  main.cpp  mainwindow.cpp  qcustomplot.cpp  serialport.cpp
radar/: CMakeLists.txt  monitor.sh
radar/include/: armorchecker.h  armordetector.h  base.h  robottracker.h  serialport.h  workspace.h
radar/meterial/: README.md
radar/param/: model.pt  param1.xml
radar/src/: armorchecker.cpp  armordetector.cpp  dhcamera.cpp  main.cpp  robottracker.cpp  workspace.cpp
recognize_number/: CMakeLists.txt
recognize_number/include/: armordetector.h  base.h  serialport.h
recognize_number/src/: armordetector.cpp  getdataset.cpp  recognizetest.cpp
src/: an_predictor.cpp  anglesolver.cpp  armorchecker.cpp  armordetector.cpp  cannode.cpp  dimension_runesolver.cpp  generalfunction.cpp  imageprocess.cpp  main.cpp  mvcamera.cpp  predict.cpp  predictor.cpp  robotdetector.cpp  runesolver.cpp  serialport.cpp  targetsolver.cpp  timer.cpp  universal_prediction.cpp  workspace.cpp
完整版/: CMakeLists.txt
完整版/include/: anglesolver.h  armordetector.h  base.h  energy.h  workspace.h
完整版/src/: armordetector.cpp  energy.cpp  serialport.cpp  targetsolver.cpp  workspace.cpp
英雄机器人/: CMakeLists.txt  README.md  数据包.md
英雄机器人/include/: anglesolver.h  armordetector.h  base.h  common.h  mvcamera.h  serialport.h  timer.h  workspace.h
英雄机器人/param/: param.xml
英雄机器人/src/: anglesolver.cpp  armordetector.cpp  main.cpp  mvcamera.cpp  serialport.cpp  targetsolver.cpp  workspace.cpp
